tests/conformance/syntax/positive/implicit_named_args_valid.ditt
module Syntax.ImplicitNamedArgs where

postulate C : Cat
id : {x : C} -> C = \{x}. x
use : (y : C) -> C = \y. id {x = y}
