tests/conformance/syntax/negative/implicit_named_args_missing_eq.ditt
module Syntax.ImplicitNamedArgsBad where

postulate C : Cat
id : {x : C} -> C = \{x}. x
use : (y : C) -> C = \y. id {x y}
